--- a/spacesim/style.css
+++ b/spacesim/style.css
@@ -207,8 +207,9 @@ canvas {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #222;
+  background: linear-gradient(#222, #111);
   border: 1px solid #0ff;
+  box-shadow: inset 0 0 10px #000;
   box-sizing: border-box;
 }
 
@@ -241,12 +242,14 @@ canvas {
 }
 
 .ship-left {
-  transform: rotateY(15deg) skewY(-2deg);
+  transform: rotateY(18deg) skewY(-2deg);
+  border-right-color: #066;
 }
 
 .ship-right {
   position: relative;
-  transform: rotateY(-15deg) skewY(2deg);
+  transform: rotateY(-18deg) skewY(2deg);
+  border-left-color: #066;
 }
 
 .ship-console {
@@ -271,14 +274,15 @@ canvas {
 .console-screen {
   left: 0;
   bottom: 60px;
-  height: 40%;
+  width: 30%;
+  height: 35%;
 }
 
 .nav-screen {
   right: 0;
   top: 0;
-  width: 60%;
-  height: 60%;
+  width: 70%;
+  height: 80%;
 }
 
 .nav-static {
@@ -296,6 +300,30 @@ canvas {
 }
 
 .burn-controls { position:absolute; bottom:0; left:0; right:0; padding:0.25rem; }
+
+.edge-buttons button {
+  position: absolute;
+}
+.edge-buttons .btn-up {
+  top: 5px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.edge-buttons .btn-down {
+  bottom: 5px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.edge-buttons .btn-left {
+  left: 5px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.edge-buttons .btn-right {
+  right: 5px;
+  top: 50%;
+  transform: translateY(-50%);
+}
 
 .hud-menu {
   position: absolute;
